SERVER-34664 Commands that are unsupported in a transaction should error

(cherry picked from commit d56d941fe6d3d0af27ef8b8524e240e750a81364)