src/mongo/db/initialize_operation_session_info.cpp
@@ -44,8 +44,14 @@ boost::optional<OperationSessionInfoFromClient> initializeOperationSessionInfo(
     bool isReplSetMemberOrMongos,
     bool supportsDocLocking,
     bool supportsRecoverToStableTimestamp) {
+    auto osi = OperationSessionInfoFromClient::parse("OperationSessionInfo"_sd, requestBody);
 
     if (!requiresAuth) {
+        uassert(ErrorCodes::OperationNotSupportedInTransaction,
+                "This command is not supported in transactions",
+                !osi.getAutocommit());
+        uassert(
+            50889, "It is illegal to provide a txnNumber for this command", !osi.getTxnNumber());
         return boost::none;
     }
 
@@ -59,8 +65,6 @@ boost::optional<OperationSessionInfoFromClient> initializeOperationSessionInfo(
             return boost::none;
         }
     }
-
-    auto osi = OperationSessionInfoFromClient::parse("OperationSessionInfo"_sd, requestBody);
 
     if (osi.getSessionId()) {
         stdx::lock_guard<Client> lk(*opCtx->getClient());
